syntax = "proto3";
option go_package = "./;funcManager";
package funcManager;

service funcManager {
  //可以添加apply便于批量化操作、auth提供权限管理能力
  rpc Create(CreateReq) returns(CreateResp){}             //添加函数
  rpc Delete(DeleteReq)returns(DeleteResp){}              //删除函数
  rpc Get(GetReq) returns(GetResp){}                       //给出函数名获取函数信息
  rpc List(ListReq)returns(ListResp){}                 //查询有哪些函数
  rpc registerGateway(RegisterReq)returns(RegisterResp){}   //向gateway注册，获取请求
}
message GeneralRequest {
  int64 requestId = 1;
  string name = 2;
  optional string labels = 3;
}
message RegisterReq{
  int64 requestId = 1;
  string name = 2;
  string address = 3;
  string port = 4;
}
message CreateReq{
  GeneralRequest request = 1;
  optional  string Annotations = 2;
  string Document = 3;
}
message DeleteReq {
  GeneralRequest request = 1;
}

message GetReq {
  GeneralRequest request = 1;
}
message ListReq{
  int64 requestId = 1;
}
message GetResp{
  int64 requestId = 1;
  int64 statusCode = 2;
  string Document = 3;
}
message CreateResp{
  int64 requestId = 1;
  int64 statusCode = 2;
  string description = 3;
  string errorInformation = 4;
}
message DeleteResp{
  int64 requestId = 1;
  int64 statusCode = 2;
  string description = 3;
  string errorInformation = 4;
}
message RegisterResp{
  int64 requestId = 1;
  int64 statusCode = 2;
  string description = 3;
  string errorInformation = 4;
}
message ListResp{
  int64 requestId = 1;
  int64 statusCode = 2;
  string list = 3;  //yaml转字符串传输
}
